# aiCraftBackUp

./: .gitmodules  LICENSE  README.md
CorC++/: .gitignore  20240804workTree  explanation
CorC++/CF/: CMakeLists.txt
CorC++/CF/src/: Educational_Codeforces_Round_169_A.cpp  Educational_Codeforces_Round_169_B.cpp  Educational_Codeforces_Round_169_C.cpp
CorC++/cprimerplus6edition/: functionpointer.c  inform.c
CppProjs/: .gitignore  CMakeLists.txt
CppProjs/basicTests/: CMakeLists.txt  hello.cpp
CppProjs/openglTests/: CMakeLists.txt  firstdemo.cpp  testClaswindao.cpp  vulkan.cpp  window.cpp
CppProjs/openglTests/VulkanTut01/: CMakeLists.txt
CppProjs/openglTests/glad-4.3/include/glad/: glad.h
CppProjs/openglTests/glad-4.3/src/: glad.c
CppProjs/openglTests/include/learnopengl/: root_directory.h
CppProjs/openglTests/tutorial05/: CMakeLists.txt  main.cpp
CppProjs/openglTests/tutorial05/include/: first_app.hpp
CppProjs/openglTests/tutorial05/src/: first_app.cpp
CppProjs/openglTests/unexisgl/include/: ue_game.h  ue_windao.h  unexisgl.h
CppProjs/openglTests/unexisgl/src/: utilities.cpp
aiTest/: .gitignore  20240203workTree  20240207workTree  20240329workTree  20240419workTree  LSTMPricePredict.py  orderedDict.py  saveModuleTest.py  testSpeedOfEinsum.py  torchexp_20240127.py
aiTest/G-CNN/: test.py
aiTest/KAN/: KANTest1.py  utils.py
aiTest/MINIST/: continuedToTrain.py  dataLoader.py  model.py  testTheModel.py
aiTest/ORNN/: reqs.txt
aiTest/autoCluster/: .gitignore  ReadMe.md  autoCluster.py  autoCluster2d.py  reqs.txt
aiTest/autoEncoder/: autoEncoder.py  cluster.py  clustertest.py
aiTest/diffuse/: play1.py  play2.py  play3.py  play4.py  play5.py  play6.py  play7.py  play8.py  reqs.txt
aiTest/fashionMnist/: .gitignore  buildNet.py  cnn.py  parameter.py  startTrain.py
aiTest/fft1/: autoFreq.py  autof.py  spec.py  stk.py  test.py
aiTest/fft2/: test.py  test2.py
aiTest/neuro/: buildNet.py  cnn.py  parameter.py  startTrain.py  testTheModel.py
aiTest/probabilisticExperiments/: 20240609.py  distribution.py
aiTest/standardWorkFlowContainer/: buildNet.py  parameter.py  standardWorkFlowExplainer.mlog  startTrain.py  test.py  testTheModel.py
aiTest/stockReal2Monopoly/: statistics.py
aiTest/transform/: .gitignore  1 copy.py  1.py  2.py  3 copy.py  3.py  4 copy.py  4.py  5.py  C  DE  E  E2  E2p  K  LL.npy  Q  V  cnnCheckPointCNN  cnnCheckPointCNNuse  cnnCheckPoint_test3  dif_day_data_image.py  dif_day_data_image_with_cnn.py  dif_day_data_image_with_cnn_test.py  model.py  paralis  play1.py  reqs.txt  share_data.py  show.py  soft_C  soft_max  test1.py  test2.py  test3.py  test3val.py  test4.py  trans1  trans2  飘飘LL.npy  (+1 more)
blenderWorkTree/: 20240308workTree
cordDaily/: cord20240201.mmpz  cord20240203.mmpz
differenceEngine/: .gitignore  20240208workTree  20240209workTree  20240210workTree  20240211workTree  20240212workTree  beforeComputeShader.py  computeShaderFinally.py  keyBoardTest.py  mainComputeShaderConway.py  mainComputeShaderSand.py  mainShaderConway.py  mainShaderConway2.py  main_shader.py  main_shader_electro.py  mianPlayGround.py  pleaseGiveMeTime.py  pygameSixHour.py  standAloneContextModerngl.py  test.py  ui.py  vaoTest1.py
differenceEngine/COLA/: entiti.py
differenceEngine/ComputeShaderTutorial/: mainn.py
differenceEngine/P2Ptest/: testemail.py  testp2p.py  testp2pp.py  testp2pser.py
differenceEngine/blockChain/: main.py
differenceEngine/communicationTest/: commandHelpFile  friendList.json  main.py  requirements.txt  updateIpfile
differenceEngine/compute_shader_render_texture/: _example.py  test_.py
differenceEngine/demonRush/: frag.glsl  (+3 more)
mainBlog/: 20240127workTree.md  20240128workTree.md
utilitiTech/: c  cuda  pyglet  python  system  utilitiTech
websites/: .gitignore  COLA.tex  gptGeneratedPersonalPage.html  std_book.tex  std_book_cn.tex  std_book_cn_ref.bib  testbook.tex  tex.tex
(+211 files in other folders)
